# myfeed

./: CLAUDE.md
.claude/skills/create-spec/: SKILL.md
.claude/skills/implement-spec/: SKILL.md
.claude/skills/refine-spec/: SKILL.md
contracts/: buf.gen.yaml
contracts/com/softmemes/myfeed/v1/: common.proto  feed.proto  sources.proto  subscriptions.proto  users.proto
services/: Cargo.toml
services/api/: .env.sample  Cargo.toml  build.rs
services/api/src/: auth.rs  content.rs  error.rs  logging.rs  main.rs  proto.rs  youtube.rs
services/api/src/services/: feed_service.rs  mod.rs  subscription_service.rs
services/api/src/store/: in_memory.rs  mod.rs  repository.rs
specs/: bootstrap-backend-dummy-data.md  bootstrap-basic-contracts.md  bootstrap-connect-web-app-to-backend.md  bootstrap-firestore-data-model.md  bootstrap-initial-web-prototype.md  sources-youtube.md  sync-persistence.md
web/: next.config.ts  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/sources/: page.tsx
web/src/app/subscriptions/: page.tsx
web/src/components/: add-subscription-dialog.tsx  feed-item-card.tsx  nav-bar.tsx  seed-provider.tsx
web/src/lib/: domain.ts  mock-data.ts  seed.ts  storage.ts
web/src/server/: grpc.ts
web/src/server/routers/: _app.ts  feed.ts  sources.ts  subscriptions.ts
web/src/trpc/: provider.tsx
