[package]
name = "myfeed-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
